# floating-tasks

./: .env.example  .gitignore  .vercelignore  index.html  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
docs/: index.html  privacy-policy.html
scripts/addness/: extract.js  toggle.js
src/: App.css  App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  tray.rs
src/components/: BackgroundAnimation.tsx  ConfirmDialog.css  ConfirmDialog.tsx  InlineEditor.css  InlineEditor.tsx  IntervalPicker.css  IntervalPicker.tsx  LoginScreen.css  LoginScreen.tsx  RecurringSubTaskItem.tsx  RecurringTemplateInput.css  RecurringTemplateInput.tsx  RecurringTemplateItem.css  RecurringTemplateItem.tsx  SettingsScreen.css  SettingsScreen.tsx  TaskInput.css  TaskInput.tsx  TaskItem.css  TaskItem.tsx  TaskList.css  TaskList.tsx  TaskStatusPopup.tsx  TitleBar.css  TitleBar.tsx
src/hooks/: useAddnessSync.ts  useCalendarEvents.ts  useClickRipple.ts  useDailyMessage.ts  useExpandedState.ts  useGoogleAuth.ts  useKeyboardNav.ts  useRecurringReset.ts  useRecurringTemplates.ts  useTasks.ts  useTheme.ts  useUndoHistory.ts
src/lib/: googleAuth.ts  googleCalendar.ts  store.ts
src/types/: addness.ts  calendar.ts  recurring.ts  task.ts
src/utils/: recurringReset.ts  taskTree.ts
