[package]
name = "floating-tasks"
version = "0.1.0"
description = "A floating task list app"
authors = ["miyabi03"]
edition = "2021"

[lib]
name = "floating_tasks_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-store = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
urlencoding = "2"

[target.'cfg(target_os = "macos")'.dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
